ignore button working

--- a/src/app/Registration/signup.component.html
+++ b/src/app/Registration/signup.component.html
@@ -1,3 +1,5 @@
+<title>Sligo Sounds - User Registration</title>
+
 <div class="main">
   <mat-card class="form">
         <h1 style="font-size:5.5vw;">Register New User</h1>
@@ -47,7 +49,7 @@
           <textarea [(ngModel)]="date" name="date" matInput placeholder="date joined"></textarea>
         </div>
         <br>
-        <button (click)="register()"  mat-raised-button color="primary">Register</button>
+        <button (click)="register()"  mat-raised-button color="black">Register</button>
       </form>
     </mat-card>
   </mat-card>
