--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
-<div class="container">
-  <app-navbar></app-navbar>
+<div  class="container">
+<mat-sidenav-container>
+    <mat-sidenav #sidenav role="navigation">      
+      <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
+      </mat-sidenav>
+      <mat-sidenav-content>
+  <app-navbar (sidenavToggle)="sidenav.toggle()"></app-navbar>
   <app-notification></app-notification>
   <router-outlet></router-outlet>
+</mat-sidenav-content>
+</mat-sidenav-container>
 </div>
-
