--- a/src/app/Nav-bar/navbar.component.html
+++ b/src/app/Nav-bar/navbar.component.html
@@ -1,4 +1,10 @@
 <mat-toolbar color="black">
+    <div fxHide.gt-xs>
+        <button mat-icon-button (click)="onToggleSidenav()">Menu
+        </button>
+    </div>
+    <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
+  <h1>Sligo Sounds</h1>
     <button mat-button routerLinkActive="active" *ngIf="userLoggedIn()"  routerLink="home">Home</button>
     <button mat-button routerLinkActive="active" *ngIf="userLoggedIn()" routerLink="add-event">Add Event</button>
     <button mat-button routerLinkActive="active" *ngIf="userStatus && userLoggedIn()" routerLink="profile">Profile</button>
@@ -20,5 +26,5 @@
 
     </ul>
     </mat-menu>
-
+</div>
   </mat-toolbar>
