--- a/src/app/Registration/venue/venue-sign-up.component.scss
+++ b/src/app/Registration/venue/venue-sign-up.component.scss
@@ -4,12 +4,18 @@ h1{
     font-family: graffiti;
     color: white;
 }
+h3{
+    margin: auto;
+    text-align: center;
+    font-family: graffiti;
+    color: white;
+}
 .main{
-    background-image: url(/src/app/images/tradsession.jpg);
+    background-image: url(/src/app/images/swagman.jpg);
     background-repeat: no-repeat; 
     background-size: cover;
     width: 100%;
-    height: 750px;    
+    height: 1200px;    
 }
 .form{
     background-color: rgba(0,0,0,.5);
