--- a/src/app/Users/login.component.html
+++ b/src/app/Users/login.component.html
@@ -1,3 +1,4 @@
+<title>Sligo Sounds - Login</title>
   <mat-card class="background">
   <mat-card class="form">
     <div class="header">
@@ -16,7 +17,7 @@
         </mat-form-field>
       </form>
       <mat-card-actions>
-          <button mat-raised-button (click)="login()" color="primary">Login</button>
+          <button mat-raised-button (click)="login()" color="black">Login</button>
         </mat-card-actions>
     </mat-card-content>    
   </mat-card>
