--- a/src/app/Users/login.component.scss
+++ b/src/app/Users/login.component.scss
@@ -1,7 +1,7 @@
 .background{
     background-image: url(/src/app/images/nightsligo.png); 
     width: 100%;
-    height: 600px;
+    height: 700px;
 }
 .form{
     background-color: rgba(0,0,0,.5);
@@ -45,9 +45,12 @@ mat-form-field {
     display: inline-block;    
     box-sizing: border-box;
   }
-  mat-card-actions{
+  button{
     margin: auto;
-    width: 60%;
+    width: 100%;
+    border: 2px solid white;
+    font-family: graffiti;
+    font-size: 24px;
 }
   mat-label{
     color: white;
