--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -1,21 +1,22 @@
-<section id="event">
-
-  <div class="section-content" ng-app>
-    <h1 class="section-header">Add a new event</h1>
-  </div>
-  <div class="card" ng:controller="Main">
-  <div class="card-body" >
-      
-    <form>
+<title>Sligo Sounds - Add Event</title>
+  <mat-card class="background">
+      <mat-card class="form">
+          <h1 class="section-header">Add a new event</h1>
+    <form class="myform">
       <div class="form-line">
           <div class="form-group">
+              <label>Event ID</label>
+              <input type="text" class="form-control" placeholder=" Enter ID" name="eventId"
+              [(ngModel)]='eventId'>
+            </div>
+          <div class="form-group">
             <label>Event title</label>
-            <input type="text" style="width: 400px;" class="form-control" placeholder=" Enter event" name="eventName"
+            <input type="text" class="form-control" placeholder=" Enter event" name="eventName"
             [(ngModel)]='eventName'>
           </div>
           <div class="form-group">
             <label>Venue name</label>
-            <input type="email" style="width: 400px;" class="form-control" placeholder=" Enter venue name" name="eventVenue"
+            <input type="text" class="form-control" placeholder=" Enter venue name" name="eventVenue"
             [(ngModel)]='eventVenue'>
           </div>	
           <div class="form-group">
@@ -38,7 +39,7 @@
      min="2019-01-01" max="2019-12-31" [(ngModel)]='eventDate' >
           </div>
           <div class="form-group">
-              <label for="appt">Choose a time for the event:</label><br>
+              <label for="appt">Time of event</label><br>
 
               <input type="time" name="eventTime" name="appt"
                      min="9:00" max="18:00" required [(ngModel)]='eventTime'>
@@ -47,23 +48,24 @@
         <div>
           <div class="form-group">
             <label for ="description">Description</label>
-             <input type="text"  class="form-control" style="width: 400px;" id="description" placeholder="Enter a Description"
+             <input type="text"  class="form-control" id="description" placeholder="Enter a Description"
              name="eventDescription" [(ngModel)]='eventDescription'>
           </div>
-          <div class="form-group">
-            <label for ="image">Image</label>
-             <input type="text"  class="form-control" style="width: 400px;" id="image" placeholder="Enter an image URL"
-             name="eventImage" [(ngModel)]='eventImage'>
-          </div>
           <div>
+              <div>
+                  <div class="form-group">
+                    <label for ="image">Image</label>
+                     <input type="text"  class="form-control" id="image" placeholder="Enter an image URL"
+                     name="eventImage" [(ngModel)]='eventImage'>
+                  </div>
+              </div>
+          </div>
+                  <div>
 
-            <button type="button" class="btn btn-primary submit" (click)="addEvent()">Submit event</button>
+            <button type="button" mat-raised-button color="black" (click)="addEvent()">Submit event</button>
           </div>
           
       </div>
     </form>
-  </div>
-  </div>
-  
-</section>
-
+  </mat-card>
+</mat-card>
